--- a/css/contact.css
+++ b/css/contact.css
@@ -151,6 +151,7 @@
         .submit hr {
             display: none;
         }
+        /*** media queries ***/
         
         @media(max-width: 992px) {
             #contact {
