new font and improve dark theme

--- a/css/about.css
+++ b/css/about.css
@@ -12,14 +12,14 @@
 .aboutHeader {
     margin-bottom: 3rem;
     padding-top: 2rem;
-    color: #F7F7F7;
+    color: #FAFAFA;
     text-align: center;
 }
 
 .about-paragraph {
     letter-spacing: 2px;
     line-height: 1.5;
-    color: #F7F7F7;
+    color: #FAFAFA;
     width: 95%;
 }
 
