--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     @import url('/css/footer.css');
     @import url('/css/hamburger.css');
     @import url('/css/transformDiv.css');
+    @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
     * {
         margin: 0;
         padding: 0;
@@ -13,6 +14,7 @@
         #2E8CFF;
         text-decoration: none;
         box-sizing: border-box;
+        font-family: 'Lato', sans-serif;
     }
     
     html {
