--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
     @import url('/css/header.css');
     @import url('/css/about.css');
+    @import url('/css/skills.css');
     @import url('/css/portfolio.css');
     @import url('/css/contact.css');
     @import url('/css/footer.css');
@@ -11,7 +12,7 @@
         padding: 0;
         font-family: Arial, Helvetica, sans-serif;
         color: /* #6c63ff; */
-        #2E8CFF;
+        #4294FF;
         text-decoration: none;
         box-sizing: border-box;
         font-family: 'Lato', sans-serif;
@@ -30,6 +31,7 @@
     
     h2 {
         font-size: 30px;
+        position: relative;
     }
     
     .scroll-indicator {
@@ -46,14 +48,23 @@
         width: 0%;
         background: linear-gradient(90deg, rgba(131, 58, 180, 1) 0%, rgba(253, 29, 29, 1) 50%, rgba(252, 176, 69, 1) 100%);
     }
+    /* before pseudoelemets */
     
-    .exclamation-mark {
-        font-size: 48px;
+    .aboutHeader::before,
+    .skillsHeader::before,
+    .portfolioHeader::before {
+        position: absolute;
+        content: '';
+        top: -40%;
+        left: 2%;
+        height: 60px;
+        width: 150px;
+        /*background-color: #FB7B47; */
         background: -webkit-linear-gradient(45deg, rgba(253, 29, 29, 1), rgba(252, 176, 69, 1));
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
+        z-index: -1;
+        opacity: 0.8;
     }
-    /* dark mode styles */
+    /*** dark theme ***/
     
     .dark-theme {
         background-color: #202020 !important;
@@ -62,11 +73,22 @@
     .dark-font {
         color: #ECE7E7 !important;
     }
+    
+    .dark-theme-form {
+        background-color: #BAB8B8 !important!;
+    }
     /* end dark mode */
     /*** media queries ***/
     
     @media(max-width: 576px) {
         h2 {
             font-size: 1.5rem;
+        }
+        .aboutHeader::before,
+        .skillsHeader::before,
+        .portfolioHeader::before {
+            width: 100px;
+            height: 45px;
+            left: 6%;
         }
     }
