--- a/css/footer.css
+++ b/css/footer.css
@@ -5,7 +5,7 @@ footer {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    background-color: #2E8CFF;
+    background-color: #4294FF;
 }
 
 .footer-arrow {
