--- a/css/hamburger.css
+++ b/css/hamburger.css
@@ -11,7 +11,7 @@
 }
 
 .nav-icon span {
-    background-color: #2E8CFF;
+    background-color: #4294FF;
     position: absolute;
     border-radius: 2px;
     transition: .3s cubic-bezier(.8, .5, .2, 1.4);
