--- a/css/contact.css
+++ b/css/contact.css
@@ -7,10 +7,6 @@
             background: #FFFFFF;
         }
         
-        .contact-container:hover {
-            border: 1px solid #0073FF;
-        }
-        
         .social-media {
             display: flex;
             flex-direction: column;
@@ -58,13 +54,8 @@
             transform: scale(1.4);
         }
         
-        .social-media-icon:hover::before {
-            border-bottom: .1rem solid #0073FF;
-            width: 110%;
-        }
-        
         form {
-            background-color: #2E8CFF;
+            background-color: #4294FF;
             border-radius: 2rem;
             min-height: 32rem;
             max-width: 48rem;
@@ -78,13 +69,13 @@
         }
         
         .contactHeader {
-            color: black;
+            color: #FAFAFA;
             margin-left: 20%;
             margin-top: 5%;
         }
         
         .contactParagraph {
-            color: black;
+            color: #FAFAFA;
             margin-left: 10%;
             margin-top: 2%;
             letter-spacing: 2px;
@@ -102,6 +93,7 @@
             text-align: center;
             color: black;
             letter-spacing: 2px;
+            font-size: 1.1rem;
         }
         
         input::placeholder,
